--- a/company.css
+++ b/company.css
@@ -9,7 +9,11 @@ body {
         font-size: 18px;
     }
 }
-
+@media (max-width:768px) {
+    body {
+        font-size:16px;
+    }
+}
 @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
         transform: translateY(0);
@@ -38,6 +42,12 @@ body {
     display: flex;
     gap: 30px;
 }
+@media (max-width: 767px) {
+    .navbar ul {
+        flex-direction: column;
+        gap: 10px;
+    }
+}    
 .navbar li {
     display: inline;
 }
@@ -62,6 +72,12 @@ body {
     padding: 20px 50px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+@media (max-width: 767px) {
+    .header {
+        flex-direction: column;
+        padding: 10px;
+    }
+}
 .header .logo {
     height: 175px;
     filter: drop-shadow(2px 4px 6px black); /* Adds a shadow */
@@ -83,6 +99,11 @@ body {
     color: #fff;
     text-align: center;
     padding: 100px 20px;
+}
+@media (max-width: 767px) {
+    .hero {
+        padding: 50px 10px;
+    }
 }
 .hero h1 {
     font-size: 3em;
@@ -116,7 +137,11 @@ h2 {
     text-align: center;
     width: 100%;
 }
-
+@media (max-width: 767px) {
+    h2 {
+        font-size: 1.5em;
+    }
+}
 /* Cards Section */
 .cards {
     display: flex;
@@ -136,6 +161,12 @@ h2 {
     text-align: center; /* Centered text */
     position: relative;
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition for interactions */
+}
+@media (max-width: 767px) {
+    .card {
+        width: 100%;
+        height: auto;
+    }
 }
 .card:hover {
     transform: translateY(-10px); /* Lift the card on hover */
@@ -164,6 +195,12 @@ h2 {
     width: 50%;
     margin: 0 auto;
     margin-top: 50px;
+}
+@media (max-width: 767px) {
+    .contact-form {
+        width: 90%;
+        padding: 10px;
+    }
 }
 .contact-form h2 {
     text-align: center;
